--- a/layouts/partials/social.html
+++ b/layouts/partials/social.html
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 <ul class="eg-social">
   <li class="eg-social__item">
     <a href="https://github.com/ergoplatform" rel="noreferrer" target="_blank" class="eg-social__link">
@@ -78,6 +80,11 @@
     </a>
   </li>
   <li class="eg-social__item">
+    <a href="https://ergoplatform.org/cn/blog/2021-06-27-%E5%85%B3%E4%BA%8Eergo%E5%90%AF%E7%94%A8%E5%AE%98%E6%96%B9qq%E9%A2%91%E9%81%93%E7%9A%84%E5%85%AC%E5%91%8A/" rel="noreferrer" target="_blank" class="eg-social__link">
+      <i class="fab fa-qq fa-lg" style="color:white"></i>
+    </a>
+  </li>
+  <li class="eg-social__item">
     <a href="https://discord.gg/kj7s7nb" rel="noreferrer" target="_blank" class="eg-social__link">
       <svg class="eg-footer__social-icon eg-footer__social-icon--discord" width="25" height="25" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd">
         <title>Discord channel</title>
@@ -86,3 +93,5 @@
     </a>
   </li>
 </ul>
+
+
