jinse and bpsaa logos added
Added the Jinse and BPSAA logos on the homepage.

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -352,9 +352,9 @@
           <div class="container container--margins-y">
             <h2 class="eg-title eg-title--black eg-mb-1-5">{{ T "partners_section" }}</h2>
             <div style="text-align: center;">
-              <a href="https://bpsaa.vision/"><img src="/img/bpsaa_member.png"></a>
+              <a href="https://bpsaa.vision/"><img src="/img/bpsaa_100.png"></a>
               &nbsp;&nbsp;&nbsp;&nbsp;
-              <img src="/img/jinse.png">
+              <a href=""><img src="/img/jinse100.png"></a>
             </div>
            </div>
            </section>
